feat: redesign Events payload granularity redesign